front page content update

--- a/app/views/abouts/home.html.erb
+++ b/app/views/abouts/home.html.erb
@@ -3,13 +3,12 @@
   <div class="banner-rotator">
     <div id="da-slider" class="da-slider">
       <div class="da-slide">
-        <h2>Responsive template</h2>
+        <h2>Mobile Payment</h2>
 
-        <p>Use icons in the button that shows the meaning of call to action. A small river named Duden flows by their
-          place and supplies it with the necessary regelialia.</p>
+        <p>Use your mobile device to pay for parking on street and in parking lots in one button click</p>
 					<span class="da-link">
-						<a href="features.html" class="">
-              <span class="main-link"><i class="fa-icon-tablet"></i> Availible on market</span>
+						<a href="pages/features.html" class="">
+              <span class="main-link"><i class="fa-icon-tablet"></i> Available on market</span>
               <span class="arrow"> &rarr;</span>
             </a>
 					</span>
@@ -17,14 +16,12 @@
         <div class="da-img visible-desktop"><img src="/assets/verso/responsive.png" alt="image01"/></div>
       </div>
       <div class="da-slide">
-        <h2>Easy customization</h2>
+        <h2>Pay per use</h2>
 
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-          blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-          ocean.</p>
+        <p>Pay only for actual parking time. Control your payment through your own device</p>
 					<span class="da-link">
-						<a href="features.html" class="">
-              <span class="main-link">View Our project</span>
+						<a href="pages/features.html" class="">
+              <span class="main-link">See how</span>
               <span class="arrow"> <i class="fa-icon-eye-open"></i></span>
             </a>
 					</span>
@@ -32,12 +29,11 @@
         <div class="da-img visible-desktop"><img src="/assets/verso/showcase-slider_code.png" alt="image01"/></div>
       </div>
       <div class="da-slide">
-        <h2>Colors presets</h2>
+        <h2>Avoid tickets</h2>
 
-        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-          paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+        <p>Continuous payment mode, stop your payment only when going out of parking spot.</p>
 					<span class="da-link">
-						<a href="features.html" class="">
+						<a href="pages/features.html" class="">
               <span class="main-link">Download now!</span>
               <span class="arrow"><i class="fa-icon-download-alt"></i> </span>
             </a>
@@ -59,7 +55,7 @@
 <div class="row-fluid">
   <hr class="half">
   <h2 class="center standart-h2title ">
-    <span class="large-text"><span class="main-color">VERSO</span> provides modern features</span>
+    <span class="large-text"><span class="main-color">OzPark</span> provides mobile payments solution</span>
   </h2>
   <hr class="half">
 </div>
@@ -69,48 +65,40 @@
 <div class="row-fluid">
   <!-- FEATURE ITEM-->
   <div class="span3">
-    <i class="fa-icon-fullscreen fa-icon-xxlarge main-color"></i>
+    <i class="fa-icon-thumbs-up fa-icon-xxlarge main-color"></i>
 
-    <h3 class="features-title"><span class="firstword">Responsive</span> Layout</h3>
+    <h3 class="features-title"><span class="firstword">Pay </span> On The Go</h3>
 
-    <p class="features"> We combine creative forces with systematic activists. All ideas require implementation and our
-      multi-disciplined netproject fosters a wide array of abilities that empower visionaries and entrepreneurs to lead
-      meaningful brands.</p>
+    <p class="features"> With OzPark you pay any where from your mobile device. Payments can be managed, stopped or extended from anywhere at any time. no need to be near your car.</p>
   </div>
   <!-- END FEATURE ITEM-->
   <!-- FEATURE ITEM-->
   <div class="span3">
     <i class="fa-icon-tint fa-icon-xxlarge main-color"></i>
 
-    <h3 class="features-title"><span class="firstword">Designer  </span>Friendly</h3>
+    <h3 class="features-title"><span class="firstword">Pay  </span>Per Use</h3>
 
-    <p class="features"> We combine creative forces with systematic activists. All ideas require implementation and our
-      multi-disciplined netproject fosters a wide array of abilities that empower visionaries and entrepreneurs to lead
-      meaningful brands.</p>
-  </div>
-  <!-- END FEATURE ITEM-->
-  <!-- FEATURE ITEM-->
-  <div class="span3">
-    <i class="fa-icon-thumbs-up fa-icon-xxlarge main-color"></i>
-
-    <h3 class="features-title"><span class="firstword">Built With</span> Bootstrap 2</h3>
-
-    <p class="features"> Inspired Thinking. Ask smarter questions, push for innovative solutions and believe in the
-      power of creativity. Be consistently open and honest. Be true to ourselves and our values. Find, stimulate and
-      maintain the best minds.</p>
+    <p class="features"> We charge only for actual parking time. Payments starts upon parking start and end immediately as you report parking end. No bulk payment that you don't use.</p>
   </div>
   <!-- END FEATURE ITEM-->
   <!-- FEATURE ITEM-->
   <div class="span3">
     <i class="fa-icon-spinner fa-icon-spin fa-icon-xxlarge main-color"></i>
 
-    <h3 class="features-title"><span class="firstword">Modern</span> features</h3>
+    <h3 class="features-title"><span class="firstword">Avoid</span> tickets</h3>
 
-    <p class="features"> Inspired Thinking. Ask smarter questions, push for innovative solutions and believe in the
-      power of creativity. Be consistently open and honest. Be true to ourselves and our values. Find, stimulate and
-      maintain the best minds.</p>
+    <p class="features"> With OzPark you pay as long as you park within the allowed parking constraints , no need to plan ahead and pay for bulk parkin. </p>
   </div>
   <!-- FEATURE ITEM-->
+  <!-- FEATURE ITEM-->
+  <div class="span3">
+    <i class="fa-icon-fullscreen fa-icon-xxlarge main-color"></i>
+
+    <h3 class="features-title"><span class="firstword">Secure</span> Payments</h3>
+
+    <p class="features"> Your account is our main concern. We apply state of the art proven security technologies to protect your account.</p>
+  </div>
+  <!-- END FEATURE ITEM-->
 </div>
 
 <hr class="half">
@@ -119,7 +107,7 @@
   <div class="span12">
     <div class="well">
       <p class="land left">
-        <span class="main-color">VERSO</span> - business template with clear design & modern layouts styles
+        <span class="main-color">OzPark</span> - mobile payments, pay per use, avoid tickets, secure.
       </p>
 
     </div>
