--- a/app/views/application/_filter.html.erb
+++ b/app/views/application/_filter.html.erb
@@ -5,7 +5,7 @@
 
 <!-- FILTER-->
 <!-- just add your TAG to data-filter="ADD HERE" -->
-<!-- and then add your same TAG to portfolio item class="ADD HERE" -->
+<!-- and then add your same TAG to features item class="ADD HERE" -->
 <div class="color-bottom-line center" data-no-turbolink>
   <div class="line-proj center">
     <div class="proj">
