--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
 <!-- END: MAIN-WRAPPER-->
 <!-- Le javascript
     ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+<!-- Placed at the end of the document so the abouts load faster -->
 <%= javascript_include_tag "application" %>
 
 <%= yield :scripts %>
