signup signin pages change to home page template

--- a/app/views/abouts/home.html.erb
+++ b/app/views/abouts/home.html.erb
@@ -107,7 +107,7 @@
   <div class="span12">
     <div class="well">
       <p class="land left">
-        <span class="main-color">OzPark</span> - mobile payments, pay per use, avoid tickets, secure.
+        <span class="main-color">OzPark</span> - mobile , pay per use, tickets free, secure payments.
       </p>
 
     </div>
