--- a/app/views/layouts/admin_unregistered.html.erb
+++ b/app/views/layouts/admin_unregistered.html.erb
@@ -2,79 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Admin Panel</title>
+  <title>OzPark</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
+  <meta name="keywords" content="">
   <meta name="author" content="">
+  <%= stylesheet_link_tag "application", media: "all" %>
 
-  <!-- Le styles -->
-  <%= stylesheet_link_tag 'admin', media: 'all' %>
+  <!--[if lt IE 7]>
+  <%= stylesheet_link_tag 'verso/font-awesome-ie7.min.css' %>
+  <![endif]-->
+
+  <%= yield :stylesheets %>
+  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Patua+One' %>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
-  <script src="/assets/admin/html5.js"></script>
+    <%= javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js" %>
   <![endif]-->
-
   <!-- Le fav and touch icons -->
-  <link rel="shortcut icon" href="/assets/admin/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/admin/bootstrap-apple-114x114.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/admin/bootstrap-apple-114x114.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/admin/bootstrap-apple-72x72.png">
-  <link rel="apple-touch-icon-precomposed" href="/assets/admin/bootstrap-apple-57x57.png">
 
-  <script type="text/javascript">
+  <%= favicon_link_tag %>
 
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-30181385-1']);
-    _gaq.push(['_trackPageview']);
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/verso/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/verso/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/verso/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="/assets/verso/apple-touch-icon-57-precomposed.png">
 
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-  </script>
-
+  <%= csrf_meta_tags %>
 </head>
-
 <body>
 
-<div class="container">
+<!--START MAIN-WRAPPER-->
+<div class="main-wrapper">
 
-  <div class="row">
+  <% if content_for? :page_header %>
+      <%= yield :page_header %>
+  <% else %>
 
-    <div class="span4 offset4">
-      <div class="navbar">
-        <div class="navbar-inner">
+      <%= render 'navigation' %>
+
+      <!-- PAGE HEADER -->
+      <div class="page-header">
+        <div class="shine">
           <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="#" style="color: #ffffff;">ADMIN PANEL</a>
-            <div class="nav-collapse">
-
-            </div><!-- /.nav-collapse -->
+            <div class="row-fluid">
+              <div class="span12">
+              </div>
+            </div>
           </div>
-        </div><!-- /navbar-inner -->
-      </div>
-
-      <% flash.each do |key, value| %>
-        <div class="alert alert-#{key}">
-          <strong><%= value %></strong>
         </div>
-      <% end %>
+      </div>
+      <!-- PAGE HEADER -->
+  <% end %>
 
-      <%= yield %>
-    </div>
+  <!-- CONTENT CONTAINER-->
+  <div class="container">
+
+    <%= yield %>
 
   </div>
 
-</div>
+  <%= render 'footer' %>
 
-<%= javascript_include_tag 'admin', media: 'all' %>
+</div>
+<!-- END: MAIN-WRAPPER-->
+<!-- Le javascript
+    ================================================== -->
+<!-- Placed at the end of the document so the abouts load faster -->
+<%= javascript_include_tag "application" %>
+
+<%= yield :scripts %>
 
 </body>
 </html>
