--- a/app/views/layouts/alternative.html.erb
+++ b/app/views/layouts/alternative.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio two Columns | VERSO HTML5 Responsive Template</title>
+  <title>OzPark</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="keywords" content="">
