navigation and features pages change

--- a/app/views/abouts/home.html.erb
+++ b/app/views/abouts/home.html.erb
@@ -55,7 +55,7 @@
 <div class="row-fluid">
   <hr class="half">
   <h2 class="center standart-h2title ">
-    <span class="large-text"><span class="main-color">OzPark</span> provides mobile payments solution</span>
+    <span class="large-text"><span class="main-color">OzPark</span> parking payments made easy</span>
   </h2>
   <hr class="half">
 </div>
@@ -114,229 +114,155 @@
   </div>
 </div>
 <!-- END CALL TO ACTION -->
-<hr class="half">
+<!--<hr class="half">-->
 
 <div class="row">
 
 <!--- ########### ## -->
 <!--- PORTFOLIO ROTATOR ## -->
 <!--- ########### ## -->
-<div class="span6 portfolio_rotator">
+<!--<div class="span6 portfolio_rotator">
 <div class="portfolio-controls">
   <h3 class="line2 center standart-h3title"><span>Showcase</span></h3>
 </div>
 
 <ul class="thumbnails slides">
-<!--START ITEM -->
+&lt;!&ndash;START ITEM &ndash;&gt;
 <li class="span4 slide">
   <div class="project-item">
     <div class="thumbnail">
-      <!--IMAGE CONTAINER OVERLAY -->
+      &lt;!&ndash;IMAGE CONTAINER OVERLAY &ndash;&gt;
       <div class="sample project-item-image-container">
 
         <div class="project-item-overlay">
           <div class="inner">
             <ul>
 
-              <li><a class="proj-btn" href="project-details.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
+              <li><a class="proj-btn" href="features/driver_app.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
             </ul>
           </div>
         </div>
         <img src="/assets/verso/project5.jpg" alt=""/>
 
       </div>
-      <!-- END: IMAGE CONTAINER OVERLAY -->
-      <!-- CAPTION -->
+      &lt;!&ndash; END: IMAGE CONTAINER OVERLAY &ndash;&gt;
+      &lt;!&ndash; CAPTION &ndash;&gt;
 
       <div class="caption">
         <div class="transit-to-top">
-          <h4 class="p-title">Awesome project title</h4>
+          <h4 class="p-title">Driver Application</h4>
 
-          <p class="caption-descr">This project presents beautiful style graphic &amp; design. VERSO provides modern
-            features</p>
+          <p class="caption-descr">On The go parking payments application.</p>
         </div>
       </div>
-      <!--END CAPTION -->
+      &lt;!&ndash;END CAPTION &ndash;&gt;
 
     </div>
   </div>
 </li>
-<!--END ITEM -->  <!--START ITEM -->
+&lt;!&ndash;END ITEM &ndash;&gt;  &lt;!&ndash;START ITEM &ndash;&gt;
 <li class="span4 slide">
   <div class="project-item">
     <div class="thumbnail">
-      <!--IMAGE CONTAINER OVERLAY -->
+      &lt;!&ndash;IMAGE CONTAINER OVERLAY &ndash;&gt;
       <div class="sample project-item-image-container">
 
         <div class="project-item-overlay">
           <div class="inner">
             <ul>
 
-              <li><a class="proj-btn" href="project-details.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
+              <li><a class="proj-btn" href="features/driver_dashboard.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
             </ul>
           </div>
         </div>
         <img src="/assets/verso/project5.jpg" alt=""/>
 
       </div>
-      <!-- END: IMAGE CONTAINER OVERLAY -->
-      <!-- CAPTION -->
+      &lt;!&ndash; END: IMAGE CONTAINER OVERLAY &ndash;&gt;
+      &lt;!&ndash; CAPTION &ndash;&gt;
 
       <div class="caption">
         <div class="transit-to-top">
-          <h4 class="p-title">Awesome project title</h4>
+          <h4 class="p-title">Driver Dashboard</h4>
 
-          <p class="caption-descr">This project presents beautiful style graphic &amp; design. VERSO provides modern
-            features</p>
+          <p class="caption-descr">Comprehensive dashboard to manage your account and billing.</p>
         </div>
       </div>
-      <!--END CAPTION -->
+      &lt;!&ndash;END CAPTION &ndash;&gt;
 
     </div>
   </div>
 </li>
-<!--END ITEM -->  <!--START ITEM -->
+&lt;!&ndash;END ITEM &ndash;&gt;  &lt;!&ndash;START ITEM &ndash;&gt;
 <li class="span4 slide">
   <div class="project-item">
     <div class="thumbnail">
-      <!--IMAGE CONTAINER OVERLAY -->
+      &lt;!&ndash;IMAGE CONTAINER OVERLAY &ndash;&gt;
       <div class="sample project-item-image-container">
 
         <div class="project-item-overlay">
           <div class="inner">
             <ul>
 
-              <li><a class="proj-btn" href="project-details.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
+              <li><a class="proj-btn" href="features/owner_app.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
             </ul>
           </div>
         </div>
         <img src="/assets/verso/project5.jpg" alt=""/>
 
       </div>
-      <!-- END: IMAGE CONTAINER OVERLAY -->
-      <!-- CAPTION -->
+      &lt;!&ndash; END: IMAGE CONTAINER OVERLAY &ndash;&gt;
+      &lt;!&ndash; CAPTION &ndash;&gt;
 
       <div class="caption">
         <div class="transit-to-top">
-          <h4 class="p-title">Awesome project title</h4>
+          <h4 class="p-title">Owner  Application</h4>
 
-          <p class="caption-descr">This project presents beautiful style graphic &amp; design. VERSO provides modern
-            features</p>
+          <p class="caption-descr">Owner mobile application to check payments</p>
         </div>
       </div>
-      <!--END CAPTION -->
+      &lt;!&ndash;END CAPTION &ndash;&gt;
 
     </div>
   </div>
 </li>
-<!--END ITEM -->
-<!--START ITEM -->
+&lt;!&ndash;END ITEM &ndash;&gt;
+&lt;!&ndash;START ITEM &ndash;&gt;
 <li class="span4 slide">
   <div class="project-item">
     <div class="thumbnail">
-      <!--IMAGE CONTAINER OVERLAY -->
+      &lt;!&ndash;IMAGE CONTAINER OVERLAY &ndash;&gt;
       <div class="sample project-item-image-container">
 
         <div class="project-item-overlay">
           <div class="inner">
             <ul>
 
-              <li><a class="proj-btn" href="project-details.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
+              <li><a class="proj-btn" href="features/owner_dashboard.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
             </ul>
           </div>
         </div>
         <img src="/assets/verso/project5.jpg" alt=""/>
 
       </div>
-      <!-- END: IMAGE CONTAINER OVERLAY -->
-      <!-- CAPTION -->
+      &lt;!&ndash; END: IMAGE CONTAINER OVERLAY &ndash;&gt;
+      &lt;!&ndash; CAPTION &ndash;&gt;
 
       <div class="caption">
         <div class="transit-to-top">
-          <h4 class="p-title">Awesome project title</h4>
+          <h4 class="p-title">Owner Dashboard</h4>
 
-          <p class="caption-descr">This project presents beautiful style graphic &amp; design. VERSO provides modern
-            features</p>
+          <p class="caption-descr">Comprehensive owner dashboard to manage assets, rates, billing and analytics.</p>
         </div>
       </div>
-      <!--END CAPTION -->
+      &lt;!&ndash;END CAPTION &ndash;&gt;
 
     </div>
   </div>
 </li>
-<!--END ITEM -->
-<!--START ITEM -->
-<li class="span4 slide">
-  <div class="project-item">
-    <div class="thumbnail">
-      <!--IMAGE CONTAINER OVERLAY -->
-      <div class="sample project-item-image-container">
-
-        <div class="project-item-overlay">
-          <div class="inner">
-            <ul>
-
-              <li><a class="proj-btn" href="project-details.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
-            </ul>
-          </div>
-        </div>
-        <img src="/assets/verso/project5.jpg" alt=""/>
-
-      </div>
-      <!-- END: IMAGE CONTAINER OVERLAY -->
-      <!-- CAPTION -->
-
-      <div class="caption">
-        <div class="transit-to-top">
-          <h4 class="p-title">Awesome project title</h4>
-
-          <p class="caption-descr">This project presents beautiful style graphic &amp; design. VERSO provides modern
-            features</p>
-        </div>
-      </div>
-      <!--END CAPTION -->
-
-    </div>
-  </div>
-</li>
-<!--END ITEM -->
-<!--START ITEM -->
-<li class="span4 slide">
-  <div class="project-item">
-    <div class="thumbnail">
-      <!--IMAGE CONTAINER OVERLAY -->
-      <div class="sample project-item-image-container">
-
-        <div class="project-item-overlay">
-          <div class="inner">
-            <ul>
-
-              <li><a class="proj-btn" href="project-details.html"><i class="fa-icon-link fa-icon-large"></i></a></li>
-            </ul>
-          </div>
-        </div>
-        <img src="/assets/verso/project5.jpg" alt=""/>
-
-      </div>
-      <!-- END: IMAGE CONTAINER OVERLAY -->
-      <!-- CAPTION -->
-
-      <div class="caption">
-        <div class="transit-to-top">
-          <h4 class="p-title">Awesome project title</h4>
-
-          <p class="caption-descr">This project presents beautiful style graphic &amp; design. VERSO provides modern
-            features</p>
-        </div>
-      </div>
-      <!--END CAPTION -->
-
-    </div>
-  </div>
-</li>
-<!--END ITEM -->
+&lt;!&ndash;END ITEM &ndash;&gt;
 </ul>
-</div>
+</div>-->
 <!--- ########### ## -->
 <!--- END: PORTFOLIO ROTATOR ## -->
 <!--- ########### ## -->
@@ -345,7 +271,7 @@
 <!--- ########### ## -->
 <!--- IN THE NEWS ## -->
 <!--- ########### ## -->
-<div class="span6">
+<!--<div class="span6">
 
   <div class="border-left-color">
     <h3 class="standart-h3title"><span>In the news</span></h3>
@@ -415,7 +341,7 @@
     </table>
   </div>
 
-</div>
+</div>-->
 
 <!--- ########### ## -->
 <!--- END: IN THE NEWS ## -->
@@ -430,7 +356,7 @@
   <!--****************-->
   <!-- CLIENTS ROTATOR -->
   <!--****************-->
-  <div class="span12 clients_rotator_widget_wrap">
+  <!--<div class="span12 clients_rotator_widget_wrap">
     <div class="color-bottom-line flex-controls-cl">
       <h3 class="line2 center standart-h3title"><span>Our clients</span></h3>
     </div>
@@ -500,7 +426,7 @@
 
     </ul>
 
-  </div>
+  </div>-->
   <!--****************-->
   <!-- END CLIENTS ROTATOR -->
   <!--****************-->
