--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -21,11 +21,9 @@
       <div class="span3">
         <h4 class="line3 center standart-h4title"><span>Navigation</span></h4>
         <ul class="footer-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">project</a></li>
-          <li><a href="#">Elements</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/abouts/about_us.html">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">Blog</a></li>
         </ul>
       </div>
       <div class="span3">
