--- a/app/views/features/owner_dashboard.html.erb
+++ b/app/views/features/owner_dashboard.html.erb
@@ -1,84 +1,158 @@
+<!--TITLE-->
 <div class="row-fluid">
-  <!-- SLIDER SIDE -->
-  <div class="span8">
-    <div class="large-sl" id="slider">
-      <!-- CONTROLS DIV CONTAINER ! NOT REMOVE -->
-      <div class="portfolio-controls-single"></div>
-      <!-- CONTROLS DIV CONTAINER ! NOT REMOVE -->
-      <!-- BEGIN SLIDER UL -->
-      <ul class="slides">
-        <!-- BEGIN SLIDE -->
-        <li class="slide thumbnail">
-          <img src="/assets/verso/slider/1.jpg" alt=""/><!-- PUT YOUR IMG HERE-->
-        </li>
-        <!-- END SLIDE -->
 
-        <!-- BEGIN SLIDE -->
-        <li class="slide thumbnail">
-          <img src="/assets/verso/slider/3.jpg" alt=""/>
-        </li>
-        <!-- END SLIDE -->
-      </ul>
-      <!-- END SLIDER UL -->
-    </div>
-    <!-- DESCRIPTION -->
-    <div class="well">
-      Some short photo description here. Some short photo description here. Some short photo description here. Some
-      short photo description here. Some short photo description here.
-    </div>
-    <!-- END DESCRIPTION -->
-  </div>
-  <!-- END: SLIDER SIDE -->
-  <!-- PORTFOLIO ASIDE -->
-  <div class="span4">
-    <!-- TITLE -->
-    <h2 class="folio-title">Awesome project! Portfolio single title! </h2>
 
-    <!-- PARAGRAPH -->
-    <p>
-      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-      condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-      sed odio dui.
-    </p>
+  <h2 class="center standart-h2title">
+    <span class="large-text">Need more features? <span class="main-color">That's it!</span></span>
+  </h2>
 
-    <p>
-      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-      condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
-      sed odio dui.
-    </p>
-    <!-- END PARAGRAPH -->
-    <!-- DEVIDER LINE -->
-    <div class="no-color-line-no-border3"></div>
-    <hr class="half2"/>
-    <!-- ACTION BUTTON -->
-    <a class="btn btn-info btn-large btn-block" href="#" title="">Buy now!</a>
-    <!-- END ACTION BUTTON -->
-  </div>
-  <!-- PORTFOLIO ASIDE -->
+  <hr class="half"/>
 </div>
 
-<% content_for :scripts do %>
-  <script>
-    // Can also be used with $(document).ready()
+<!--END: TITLE-->
 
-    jQuery('.large-sl').flexslider({
+<!-- ################ -->
+<!-- CONTAINER  FEATURE -->
+<!-- ################ -->
+<div class="row-fluid">
 
-      animation: 'slide',
-      animationLoop: false,
-      useCSS: false,
-      controlNav: false,
-      controlsContainer: '.portfolio-controls-single',
-      initDelay: 0,
-      animationSpeed: '500',
-      startAt: 0,
-      touch: true,
-      minItems: 1,
-      maxItems: 30,
-      mousewheel: true,
-      pauseOnHover: true,
-      move: 1,
-      itemWidth: 770,
-      itemMargin: 0
-    });
-  </script>
-<% end %>
+
+  <!-- FEATURE -->
+  <div class="span6">
+
+    <h3 class="standart-h2title pull-right">Responsive loyout</h3>
+    <hr class="half"/>
+    <p class="lead">
+      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
+      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
+      that strike the perfect balance between users, business, and technology.
+    </p>
+
+  </div>
+  <!--END:  FEATURE -->
+  <!--IMAGE -->
+  <div class="span6 center">
+    <img src="/assets/verso/responsive.jpg" class="" alt="feature bootstrap"/>
+  </div>
+  <!-- END IMAGE -->
+  <div class="span12">
+    <hr class="half"/>
+  </div>
+</div>
+<!-- ################ -->
+<!-- END: CONTAINER  FEATURE -->
+<!-- ################ -->
+
+
+<!-- ################ -->
+<!-- CONTAINER  FEATURE -->
+<!-- ################ -->
+<div class="row-fluid">
+
+  <!--IMAGE -->
+  <div class="span6 center">
+    <img src="/assets/verso/bootstrap-layout.jpg" class="" alt="feature bootstrap"/>
+  </div>
+  <!-- END IMAGE -->
+
+  <!-- FEATURE -->
+  <div class="span6">
+
+    <h2 class="standart-h2title pull-left">Bright & colorful design</h2>
+    <hr class="half"/>
+    <p class="lead">
+      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
+      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
+      that strike the perfect balance between users, business, and technology.
+    </p>
+
+  </div>
+  <!--END:  FEATURE -->
+
+  <div class="span12">
+    <hr class="half"/>
+  </div>
+</div>
+<!-- ################ -->
+<!-- END: CONTAINER  FEATURE -->
+<!-- ################ -->
+
+<!-- ################ -->
+<!-- CONTAINER  FEATURE -->
+<!-- ################ -->
+<div class="row-fluid">
+
+
+  <!-- FEATURE -->
+  <div class="span6">
+
+    <h3 class="standart-h2title pull-right">Clear & commented HTML code</h3>
+    <hr class="half"/>
+    <p class="lead pull-right">
+      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
+      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
+      that strike the perfect balance between users, business, and technology.
+    </p>
+
+  </div>
+  <!--END:  FEATURE -->
+  <!--IMAGE -->
+  <div class="span6 center">
+    <img src="/assets/verso/bootstrap-premium-code2.jpg" class="" alt="feature bootstrap"/>
+  </div>
+  <!-- END IMAGE -->
+  <div class="span12">
+    <hr class="half"/>
+  </div>
+</div>
+<!-- ################ -->
+<!-- END: CONTAINER  FEATURE -->
+<!-- ################ -->
+
+<!-- ################ -->
+<!-- CONTAINER  FEATURE -->
+<!-- ################ -->
+<div class="row-fluid">
+
+  <!--IMAGE -->
+  <div class="span6 center">
+    <img src="/assets/verso/bootstrap-template.jpg" class="" alt="feature bootstrap"/>
+  </div>
+  <!-- END IMAGE -->
+
+  <!-- FEATURE -->
+  <div class="span6">
+
+    <h2 class="standart-h2title pull-left">Modern page templates</h2>
+    <hr class="half"/>
+    <p class="lead">
+      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
+      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
+      that strike the perfect balance between users, business, and technology.
+    </p>
+
+  </div>
+  <!--END:  FEATURE -->
+
+  <div class="span12">
+    <hr class="half"/>
+  </div>
+</div>
+<!-- ################ -->
+<!-- END: CONTAINER  FEATURE -->
+<!-- ################ -->
+
+<div class="row-fluid">
+  <div class="span12">
+
+    <h3 class="center standart-h2title "><span class="large-text">Limited time for lower price</span> <span
+    class="main-color large-text">$12</span>
+    </h3>
+
+
+    <div class="span12 center">
+      <hr class="half"/>
+      <a href="#" title="" class="btn-action">Buy template</a>
+    </div>
+  </div>
+</div>
