--- a/app/views/abouts/home.html.erb
+++ b/app/views/abouts/home.html.erb
@@ -7,7 +7,7 @@
 
         <p>Use your mobile device to pay for parking on street and in parking lots in one button click</p>
 					<span class="da-link">
-						<a href="pages/features.html" class="">
+						<a href="features/driver_app.html" class="">
               <span class="main-link"><i class="fa-icon-tablet"></i> Available on market</span>
               <span class="arrow"> &rarr;</span>
             </a>
@@ -20,7 +20,7 @@
 
         <p>Pay only for actual parking time. Control your payment through your own device</p>
 					<span class="da-link">
-						<a href="pages/features.html" class="">
+						<a href="features/driver_app.html" class="">
               <span class="main-link">See how</span>
               <span class="arrow"> <i class="fa-icon-eye-open"></i></span>
             </a>
@@ -33,7 +33,7 @@
 
         <p>Continuous payment mode, stop your payment only when going out of parking spot.</p>
 					<span class="da-link">
-						<a href="pages/features.html" class="">
+						<a href="features/driver_app.html" class="">
               <span class="main-link">Download now!</span>
               <span class="arrow"><i class="fa-icon-download-alt"></i> </span>
             </a>
