--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -8,10 +8,8 @@
             <span class="twitter-sign"> <i class="fa-icon-twitter fa-icon-large main-color"></i></span>
           </div>
           <div class="span11">
-            <p class="twitter-bottom"><span class="main-color">TWITTER FEED //</span> Projecting with VERSO has been a
-              refreshing experience. They listened to our needs and came up with a
-              <a href="#" title="twitter">great solution</a></p>
-
+            <p class="twitter-bottom"><span class="main-color">TWITTER FEED //</span> Parking payments never made so <a href="/features/driver_app.html" title="driver app">easy</a>, <a href="/features/driver_app.html" title="driver app">accurate</a> and
+              <a href="/features/driver_app.html" title="driver app"> safe</a></p>
           </div>
         </div>
       </div>
@@ -23,26 +21,22 @@
         <ul class="footer-links">
           <li><a href="/">Home</a></li>
           <li><a href="/abouts/about_us.html">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/abouts/contact_us.html">Contact</a></li>
         </ul>
       </div>
       <div class="span3">
         <h4 class="line3 center standart-h4title"><span>Useful Links</span></h4>
         <ul class="footer-links">
-          <li><a href="#">VERSO</a></li>
-          <li><a href="#">VERSO</a></li>
-          <li><a href="#">WordPress.com</a></li>
-          <li><a href="#">ThemeForest.net</a></li>
-          <li><a href="#">Free Vector Icons</a></li>
+          <li><a href="www.cityparkmobile.com">CityPark</a></li>
         </ul>
       </div>
       <div class="span3">
         <h4 class="line3 center standart-h4title"><span>Our office</span></h4>
         <address>
-          <strong>VERSO, Inc.</strong><br>
-          <i class="fa-icon-map-marker"></i> 795 Folsom Ave, Suite 600<br>
-          San Francisco, CA 94107<br>
-          <i class="fa-icon-phone-sign"></i> + 4 (123) 456-7890
+          <strong>OzPark, Inc.</strong><br>
+          <i class="fa-icon-map-marker"></i> Nahshon 8/2<br>
+          Haifa, IL 34612<br>
+          <i class="fa-icon-phone-sign"></i> +972-4-8112732
           <div class="foot-line"></div>
 
         </address>
@@ -52,41 +46,11 @@
 
         <div class="widget_nav_menu">
           <ul class="socialIcons">
-            <li class="vimeo"><a href="#">vimeo </a></li>
             <li class="facebook"><a href="#">facebook </a></li>
-            <li class="linkedin"><a href="#">linkedin </a></li>
             <li class="twitter"><a href="#">twitter</a></li>
-            <li class="twitter2"><a href="#">twitter2</a></li>
-            <li class="pinterest"><a href="#">pinterest</a></li>
-            <li class="flickr"><a href="#">flickr </a></li>
-            <li class="digg"><a href="#">digg</a></li>
-            <li class="yahoo1"><a href="#">yahoo1</a></li>
-            <li class="yahoo2"><a href="#">yahoo2</a></li>
-            <li class="reddit"><a href="#">reddit</a></li>
             <li class="googleplus"><a href="#">googleplus</a></li>
-            <li class="stumbleupon"><a href="#">stumbleupon</a></li>
-            <li class="skype"><a href="#">skype</a></li>
-            <li class="deviantart"><a href="#">deviantart</a></li>
-            <li class="delicious"><a href="#">delicious </a></li>
-            <li class="tumblr"><a href="#">tumblr </a></li>
-            <li class="lastfm"><a href="#">lastfm </a></li>
-            <li class="youtube"><a href="#">youtube</a></li>
-            <li class="friendfeed"><a href="#">friendfeed </a></li>
-            <li class="myspace"><a href="#">myspace </a></li>
-            <li class="rss"><a href="#">rss </a></li>
-            <li class="badoo"><a href="#">badoo </a></li>
-            <li class="dribble"><a href="#">dribble </a></li>
-            <li class="blogger"><a href="#">blogger </a></li>
-            <li class="homeicon"><a href="#">homeicon</a></li>
-            <li class="phone"><a href="#">phone </a></li>
-            <li class="email"><a href="#">email </a></li>
-            <li class="picassa"><a href="#">picassa </a></li>
-            <li class="livejournal"><a href="#">livejournal </a></li>
-            <li class="bebo"><a href="#">bebo </a></li>
-            <li class="technorati"><a href="#">technorati </a></li>
-            <li class="newsvine"><a href="#">newsvine</a></li>
-            <li class="wordpress"><a href="#">wordpress </a></li>
-            <li class="yelp"><a href="#">yelp </a></li>
+            <li class="phone"><a href="/about/contact_us.html">phone </a></li>
+            <li class="email"><a href="/about/contact_us.html">email </a></li>
           </ul>
         </div>
       </div>
