--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -27,7 +27,7 @@
       <div class="span3">
         <h4 class="line3 center standart-h4title"><span>Useful Links</span></h4>
         <ul class="footer-links">
-          <li><a href="www.cityparkmobile.com">CityPark</a></li>
+          <li><a href="http://www.cityparkmobile.com">CityPark</a></li>
         </ul>
       </div>
       <div class="span3">
