--- a/app/views/features/driver_dashboard.html.erb
+++ b/app/views/features/driver_dashboard.html.erb
@@ -1,9 +1,19 @@
+<% content_for :page_header do %>
+    <h1>Driver Dashboard</h1>
+    <!-- BREADCRUMB -->
+    <ul class="breadcrumb">
+      <li><a href="/abouts/home.html">Home</a> <span class="divider">&rarr;</span></li>
+      <li class="active">Driver Dashboard</li>
+    </ul>
+    <!--END: BREADCRUMB -->
+<% end %>
+
 <!--TITLE-->
 <div class="row-fluid">
 
 
   <h2 class="center standart-h2title">
-    <span class="large-text">Need more features? <span class="main-color">That's it!</span></span>
+    <span class="large-text">Your account <span class="main-color">online!</span></span>
   </h2>
 
   <hr class="half"/>
@@ -20,12 +30,10 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Responsive loyout</h3>
+    <h3 class="standart-h2title pull-right">Manage your account</h3>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      Manage your account information online. Account information includes personal information, credit cards details and the list of cars used.
     </p>
 
   </div>
@@ -58,12 +66,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Bright & colorful design</h2>
+    <h2 class="standart-h2title pull-left">Manage cars list</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      View and edit your list of actively used cars and available for payment. Pay for all you family cars
+      with one account. Then view consolidated billing reports.
     </p>
 
   </div>
@@ -86,12 +93,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Clear & commented HTML code</h3>
+    <h3 class="standart-h2title pull-right">Billing reports</h3>
     <hr class="half"/>
     <p class="lead pull-right">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      View your billing history online. Gone are the days you need to wait for your billing reports by mail.
+      You can review and submit revocation requests online in case you have identified a false charge.
     </p>
 
   </div>
@@ -123,12 +129,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Modern page templates</h2>
+    <h2 class="standart-h2title pull-left">Billing statistics</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      View our billing history statistics and identify unusual transaction. OzPark give you all the tool
+      to pay only for what you have used. And submit revocation request if found false charges.
     </p>
 
   </div>
@@ -145,14 +150,14 @@
 <div class="row-fluid">
   <div class="span12">
 
-    <h3 class="center standart-h2title "><span class="large-text">Limited time for lower price</span> <span
-    class="main-color large-text">$12</span>
+    <h3 class="center standart-h2title "><span class="large-text">Sign in </span> <span
+    class="main-color large-text">required</span>
     </h3>
 
 
     <div class="span12 center">
       <hr class="half"/>
-      <a href="#" title="" class="btn-action">Buy template</a>
+      <a href="/users/sign_in" title="" class="btn-action">Sign In</a>
     </div>
   </div>
 </div>
