--- a/app/views/abouts/about_us.html.erb
+++ b/app/views/abouts/about_us.html.erb
@@ -1,3 +1,14 @@
+<% content_for :page_header do %>
+                    <h1>About Us</h1>
+                    <!-- BREADCRUMB -->
+                    <ul class="breadcrumb">
+                      <li><a href="/abouts/home.html">Home</a> <span class="divider">&rarr;</span></li>
+                      <li class="active">About Us</li>
+                    </ul>
+                    <!--END: BREADCRUMB -->
+<% end %>
+
+
 <div class="row-fluid">
   <!-- ASIDE -->
   <div class="span4">
@@ -5,20 +16,12 @@
       <h2 class="standart-h2title line2">About us</h2>
 
       <p class="">
-        Some useful information about your company. Some useful information about your company. Some useful
-        information about your company. Some useful information about your company. Some useful information about your
-        company. Some useful information about your company. Some useful information about your company. Some useful
-        information about your company.
-
+        OzPark is an Israeli Australian joint venture led by financial software veterans. OzPark strives to
+        provide mobile payment solutions to various industry segments. OzPark flagship solution is mobile
+        parking payment solution for on and off street parking spots. OzPark solution goals are simplicity,
+        pay per use and security.
       </p>
 
-      <p class="">
-        Some useful information about your company. Some useful information about your company. Some useful
-        information about your company. Some useful information about your company. Some useful information about your
-        company. Some useful information about your company. Some useful information about your company. Some useful
-        information about your company.
-
-      </p>
     </div>
   </div>
   <!--END:  ASIDE -->
@@ -29,131 +32,34 @@
       <div id="st-accordion" class="st-accordion">
         <ul>
           <li>
-            <a href="#">Photography<span class="st-arrow">Open or Close</span></a>
+            <a href="#">Simple<span class="st-arrow">Open or Close</span></a>
 
             <div class="st-content">
-              <p>She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-
-              <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of
-                her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the
-                Line Lane.</p>
-
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                far World of Grammar.</p>
-
-
+              <p>With OzPark all you need is one button click to start payment. The application will automatically identify your location.
+                In case GPS is not activated, you can manually set your location</p>
             </div>
           </li>
           <li>
-            <a href="#">Web Design<span class="st-arrow">Open or Close</span></a>
+            <a href="#">Pay per use<span class="st-arrow">Open or Close</span></a>
 
             <div class="st-content">
-              <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-                ocean.</p>
-
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-                paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
+              <p>With OzPark you pay only per actual parking time. Payment start when you click the start button and end when you click the end button.</p>
             </div>
           </li>
           <li>
-            <a href="#">Illustrations<span class="st-arrow">Open or Close</span></a>
+            <a href="#">Avoid Tickets<span class="st-arrow">Open or Close</span></a>
 
             <div class="st-content">
-              <p>O my friend - but it is too much for my strength - I sink under the weight of the splendour of these
-                visions!</p>
-
-              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                which I enjoy with my whole heart.</p>
-
-              <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls
-                like mine.</p>
+              <p>With OzPark, payment is not bounded and does not stopped until you explicitly stop it.</p>
             </div>
           </li>
           <li>
-            <a href="#">Miscancellous<span class="st-arrow">Open or Close</span></a>
+            <a href="#">Secure<span class="st-arrow">Open or Close</span></a>
 
             <div class="st-content">
-              <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs,
-                pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's
-                happened to me?"</p>
-
-              <p>He thought. It wasn't a dream. His room, a proper human room although a little too small, lay
-                peacefully between its four familiar walls.</p>
+              <p>With OzPark, your credit card details are stored securely inaccessible to other users.</p>
             </div>
           </li>
-          <li>
-            <a href="#">References<span class="st-arrow">Open or Close</span></a>
-
-            <div class="st-content">
-              <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that
-                covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at
-                the dull weather.</p>
-
-              <p>Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
-            </div>
-          </li>
-          <li>
-            <a href="#">Internship<span class="st-arrow">Open or Close</span></a>
-
-            <div class="st-content">
-              <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that
-                covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at
-                the dull weather.</p>
-
-              <p>Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
-            </div>
-          </li>
-          <li>
-            <a href="#">Jobs<span class="st-arrow">Open or Close</span></a>
-
-            <div class="st-content">
-              <p>O my friend - but it is too much for my strength - I sink under the weight of the splendour of these
-                visions!</p>
-
-              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
-                which I enjoy with my whole heart.</p>
-
-              <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls
-                like mine.</p>
-            </div>
-          </li>
-          <li>
-            <a href="#">Events<span class="st-arrow">Open or Close</span></a>
-
-            <div class="st-content">
-              <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that
-                covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at
-                the dull weather.</p>
-
-              <p>Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
-            </div>
-          </li>
-          <li>
-            <a href="#">Newsletter<span class="st-arrow">Open or Close</span></a>
-
-            <div class="st-content">
-              <p>It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that
-                covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at
-                the dull weather.</p>
-
-              <p>Drops of rain could be heard hitting the pane, which made him feel quite sad.</p>
-            </div>
-          </li>
-          <li>
-            <a href="#">Contact<span class="st-arrow">Open or Close</span></a>
-
-            <div class="st-content">
-              <p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do
-                not know how to pursue pleasure rationally encounter consequences that are extremely painful.</p>
-
-              <p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is
-                pain, but because occasionally circumstances occur in which toil and pain can procure him some great
-                pleasure.</p>
-            </div>
-          </li>
-
         </ul>
       </div>
     </div>
