--- a/app/views/abouts/contact_us.html.erb
+++ b/app/views/abouts/contact_us.html.erb
@@ -1,3 +1,14 @@
+<% content_for :page_header do %>
+    <h1>Contact Us</h1>
+    <!-- BREADCRUMB -->
+    <ul class="breadcrumb">
+      <li><a href="/abouts/home.html">Home</a> <span class="divider">&rarr;</span></li>
+      <li class="active">Contact Us</li>
+    </ul>
+    <!--END: BREADCRUMB -->
+<% end %>
+
+
 <div class="container">
   <div class="row">
 
