--- a/app/views/features/driver_app.html.erb
+++ b/app/views/features/driver_app.html.erb
@@ -1,31 +1,38 @@
+<% content_for :page_header do %>
+    <h1>Driver Application</h1>
+    <!-- BREADCRUMB -->
+    <ul class="breadcrumb">
+      <li><a href="/abouts/home.html">Home</a> <span class="divider">&rarr;</span></li>
+      <li class="active">Driver Application</li>
+    </ul>
+    <!--END: BREADCRUMB -->
+<% end %>
+
 <!--TITLE-->
 <div class="row-fluid">
 
-
   <h2 class="center standart-h2title">
-    <span class="large-text">Need more features? <span class="main-color">That's it!</span></span>
+    <span class="large-text">OzPark <span class="main-color">Driver Application</span></span>
   </h2>
 
   <hr class="half"/>
-</div>
 
+</div>
 <!--END: TITLE-->
 
 <!-- ################ -->
 <!-- CONTAINER  FEATURE -->
 <!-- ################ -->
 <div class="row-fluid">
-
-
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Responsive loyout</h3>
+    <h3 class="standart-h2title pull-right">Pay on the go</h3>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      With OzPark you pay any where via your mobile device. Payments can be managed,
+      stopped or extended at any time. all you have to do is one button click to start or stop a payment.
+      In case location services are not available you can manually select your location.
     </p>
 
   </div>
@@ -58,12 +65,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Bright & colorful design</h2>
+    <h2 class="standart-h2title pull-left">Pay per use</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      OzPark driver mobile application stores your user information and automatically identifies your location.
+      You will be charged only for the time you have parked.
     </p>
 
   </div>
@@ -86,12 +92,11 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h3 class="standart-h2title pull-right">Clear & commented HTML code</h3>
+    <h3 class="standart-h2title pull-right">Manage your account</h3>
     <hr class="half"/>
     <p class="lead pull-right">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      You can manage you personal information including credit card and cars details from the mobile application.
+      all details are securely stored.
     </p>
 
   </div>
@@ -123,12 +128,10 @@
   <!-- FEATURE -->
   <div class="span6">
 
-    <h2 class="standart-h2title pull-left">Modern page templates</h2>
+    <h2 class="standart-h2title pull-left">View your billing history</h2>
     <hr class="half"/>
     <p class="lead">
-      Gone are the days of building simple websites. Clients are demanding more functionality and better results from
-      their websites and we create unforgettable brand experiences. Our passion is helping design and build solutions
-      that strike the perfect balance between users, business, and technology.
+      Your billing history is available online.
     </p>
 
   </div>
@@ -145,14 +148,14 @@
 <div class="row-fluid">
   <div class="span12">
 
-    <h3 class="center standart-h2title "><span class="large-text">Limited time for lower price</span> <span
-    class="main-color large-text">$12</span>
+    <h3 class="center standart-h2title "><span class="large-text">Application is available for </span> <span
+    class="main-color large-text">FREE</span>
     </h3>
 
 
     <div class="span12 center">
       <hr class="half"/>
-      <a href="#" title="" class="btn-action">Buy template</a>
+      <a href="#" title="" class="btn-action">Download</a>
     </div>
   </div>
 </div>
