--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -1,3 +1,13 @@
+<% content_for :page_header do %>
+    <h1>Pricing</h1>
+    <!-- BREADCRUMB -->
+    <ul class="breadcrumb">
+      <li><a href="/abouts/home.html">Home</a> <span class="divider">&rarr;</span></li>
+      <li class="active">Pricing</li>
+    </ul>
+    <!--END: BREADCRUMB -->
+<% end %>
+
 <!-- PRICING 2 col -->
 <div class="row-fluid">
   <div class="span12">
