--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -19,6 +19,7 @@
     <span class="add-on"><i class="icon-key"></i></span>
     <%= f.password_field :password_confirmation, class: 'span2', placeholder: 'Confirm password' %>
   </div>
+    <span>at least 8 characters</span>
     <p></p>
 
   <div class="input-prepend">
@@ -30,6 +31,7 @@
     <span class="add-on"><i class="icon-key"></i></span>
     <%= f.text_field :lastname, class: 'span2', placeholder: 'Last name' %>
   </div>
+    <span>at least 2 characters</span>
   <p></p>
 
   <div class="input-prepend">
